--- a/src/main/resources/database/mysql_jdbc.properties
+++ b/src/main/resources/database/mysql_jdbc.properties
@@ -10,9 +10,9 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.password=password
 
 # openshift database
-jdbc.url=jdbc:mysql://Host:3306/database-Name?characterEncoding=utf-8&autoReconnect=true
-jdbc.username=name
-jdbc.password=password
+jdbc.url=jdbc:mysql://mysql:3306/db_test?characterEncoding=utf-8&autoReconnect=true
+jdbc.username=liuquangai
+jdbc.password=1092159077
 
 ##DataSource Global Setting
 #配置初始化大小、最小、最大
